Bug 331554 - Ghost pixel data in empty group layers
Summary: Ghost pixel data in empty group layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 2.8 Beta
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-26 22:20 UTC by vanyossi
Modified: 2015-01-15 20:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2014-02-26 22:20:12 UTC
After deleting all layers inside a group contents remains in display as if the group had layers. The group ghost contents disappear after adding one empty layer but reappear if group is left empty again.

Reproducible: Always

Steps to Reproduce:
1. Create a group layer with 2 paint layers in it (It only works with more than one layer inside the group)
2. Paint something in both layers
3. Delete layers leaving the group empty
Actual Results:  
Deleted pixel data reappears in the group

Expected Results:  
group layer should display nothing if empty.
Comment 1 Halla Rempt 2014-02-27 11:04:25 UTC
Thanks, I can confirm. Dmitry, do you have an idea what's going on here?
Comment 2 Dmitry Kazakov 2014-02-28 09:36:44 UTC
Yes, the content of the  group's projection is not updated after all the child layers got removed, so it is updated only when you add any child layer. That is a bug, yes.
Comment 3 Paul Geraskin 2014-09-18 13:44:12 UTC
Just found the sameissue :)
http://youtu.be/qw2PF7DyWg4
Comment 4 Dmitry Kazakov 2015-01-15 20:44:42 UTC
Git commit fa51d6aec006a65db8ea13f250accf930cb30694 by Dmitry Kazakov.
Committed on 15/01/2015 at 16:47.
Pushed by dkazakov into branch 'calligra/2.9'.

Fix ghost pixels on a group layer with no children :)

M  +10   -2    krita/image/kis_group_layer.cc

http://commits.kde.org/calligra/fa51d6aec006a65db8ea13f250accf930cb30694