Fix ghost pixels on a group layer with no children :)

BUG:331554